--- a/Jose_project_summary.Rmd
+++ b/Jose_project_summary.Rmd
@@ -60,7 +60,7 @@ write_csv(tidy_embryo_expression, 'results/tidy_embryo_expression.csv')
 
 
 # Introduction
-My name is **Jose Barrero** and I am a Research Scientist in Agriculture and Food. I recently started leading the Cowpea Team in Black Mountain. I have not done any coding before but I generate large datasets that need complex analysis, so that is why I decided to learn a bit of R and to come to Data School as part of my _Julius Career Award_ activities.
+My name is **Jose Barrero** and I am a Research Scientist in Agriculture and Food. Although I have worked mainly with cereals in the past I recently started leading the Cowpea Team in Black Mountain. I have not done any coding before but I generate large datasets that need complex analysis, so that is why I decided to learn a bit of R and to come to Data School as part of my _Julius Career Award_ activities.
 
 # My Project
 My project is about exploring gene changes in a **transgenic "high-oil" cowpea** line that we have made. Cowpea (Image 1) is a key staple crop in West Africa being a main protein source for over 200 million people. By introducing the gene cassette that appears below (Image 2) with three oil-related genes (oleosin, WRI1 and DGAT1) we tried to increased the oil-content in the seeds making them more nutritious.
@@ -200,10 +200,10 @@ heatmap_plot
 ```
 
 # My Digital Toolbox
-For this project I have used mainly the `Tydyverse` package, but I had to add a few others to add images to graphs (`library(png)` and `library(grid)`) I also explored the `heatmap()` function that is built in R for using a matrix of data, although I decided to use `ggplot` at the end for making the heatmap.
+For this project I have used mainly the `Tydyverse` package, but I had to add a few others to add images to graphs (`library(png)` and `library(grid)`) I also explored the `heatmap()` function that is built in R for using a matrix of data, although I decided to use `ggplot` at the end for making the heatmap. I have also enjoyed a lot learning about `Rmarkdown` which will be a great tool in the future too.
 
 ## Favourite tools
-![](resources/img/tidyverse.png){width=100px}![](resources/img/ggplot.png){width=90px} and of course ![](resources/img/dataschool.jpg){width=90px}
+![](resources/img/tidyverse.png){width=100px}![](resources/img/ggplot.png){width=90px} ![](resources/img/rmarkdown.png){width=90px} and of course ![](resources/img/dataschool.png){width=90px}
 
 # My time went ...
 I spent about 10% of the time tidying the data, about 80% trying to do the cluster analysis and heatmap, and about 10% preparing the Rmarkdown file. I found it a bit overwhelming initially because there where so many options when I searched the web for help. It was difficult to change from dataframes to matrix formats. Also, because I tried to analyse the whole cowpea genome I was running out of computing power. Likely, the instructors put me into the right track and I could find the appropiate approach.
@@ -216,9 +216,9 @@ With this exercise I was able to identify groups of genes that are high- or low-
 
 I am very happy to have attended **Data School**. The experiencxe has been much more positive than I though and, starting from zero, I have learnt heaps. The course was very well structured and the teachers were fantastic. I will definetly recommend it.
 
-**Thanks a lot to Spephen, Keransa, Khristian and all the helpers for your effort and patience!**
+**Thanks a lot to Stephen, Keransa, Khristian and all the helpers for your effort and patience!**
 
-And thanks to TJ Higgins, Surinder Singh and Jerome Verdier for sharing the data.
+**And thanks to TJ Higgins and Surinder Singh's Team and to Jerome Verdier for sharing the data.**
 
 R version: `r getRversion()`
 Tidyverse version: `r packageVersion("tidyverse")` 
